[backend] merge main
