# docs/swagger.yaml
@@ -1161,19 +1161,6 @@ paths:
       tags:
       - Discover
       - Product
-  /logout:
-    post:
-      description: Logout the current user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "401":
-          description: Unauthorized
-      summary: Logout
-      tags:
-      - Auth
   /news:
     get:
       consumes:
@@ -1210,6 +1197,19 @@ paths:
       summary: Get News Detail
       tags:
       - News
+  /oauth/logout:
+    post:
+      description: Logout the current user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+      summary: Logout
+      tags:
+      - Auth
   /product/{id}:
     get:
       consumes:
